# yachty-yat

./: README.md
server/: Cargo.toml
web/: index.html  package.json  pnpm-lock.yaml
web/public/: board.glb  dice.glb
web/public/shaders/: vert.glsl
web/src/: geometry.ts  main.ts  shader.ts  style.css
web/src/math/: matrix.ts  vector.ts
