[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.3.0", features = ["debug_error_checks"]}

[dev-dependencies]
beryllium = "0.13.0"
imagine = "0.5.1"

